Add default_password key in custom-user.php and handlePassword method in src/CustomUser.php

--- a/composer.json
+++ b/composer.json
@@ -47,7 +47,7 @@
                 "Mawuekom\\CustomUser\\CustomUserServiceProvider"
             ],
             "aliases": {
-                "CustomUser": "Mawuekom\\CustomUser\\Facades\\CustomUserFacade"
+                "CustomUser": "Mawuekom\\CustomUser\\Facades\\CustomUser"
             }
         }
     }
