--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
     "require": {
         "php": "^7.2|^7.3|^7.4|^8.0",
         "illuminate/support": "^8.0",
-        "spatie/data-transfer-object": "^2.8"
+        "spatie/data-transfer-object": "^2.8",
+        "mawuekom/laravel-model-uuid": "^2.0"
     },
     "require-dev": {
         "orchestra/testbench": "^6.0",
