--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "php": "^7.2|^7.3|^7.4|^8.0",
         "illuminate/support": "^8.0",
         "spatie/data-transfer-object": "^2.8",
-        "mawuekom/laravel-model-uuid": "^2.0"
+        "mawuekom/laravel-model-uuid": "^2.0",
+        "mawuekom/laravel-password-history": "^1.4"
     },
     "require-dev": {
         "orchestra/testbench": "^6.0",
