Refactor: Register database seeders namespace

--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
     },
     "autoload": {
         "psr-4": {
-            "Mawuekom\\CustomUser\\": "src"
+            "Mawuekom\\CustomUser\\": "src",
+            "Mawuekom\\CustomUser\\Database\\Seeders": "database\\seeders"
         }
     },
     "autoload-dev": {
