--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,9 @@
     ],
     "require": {
         "php": "^7.2|^7.3|^7.4|^8.0",
-        "illuminate/support": "^8.0",
-        "illuminate/database": "^8.0",
-        "illuminate/console": "^8.0",
+        "illuminate/support": "^8.0|^9.0",
+        "illuminate/database": "^8.0|^9.0",
+        "illuminate/console": "^8.0|^9.0",
         "spatie/data-transfer-object": "^2.8",
         "mawuekom/laravel-model-uuid": "^2.0",
         "mawuekom/laravel-password-history": "^1.4",
