--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "mawuekom/laravel-model-uuid": "^2.0",
         "mawuekom/laravel-password-history": "^1.4",
         "doctrine/dbal": "^3.1",
-        "symfony/console": "^5.4"
+        "symfony/console": "^5.4|^6.0"
     },
     "require-dev": {
         "orchestra/testbench": "^6.0",
